# split

./: .gitignore  README.md  package.json  vite.config.ts
server/: .env  Cargo.toml  DbConnectionFactory.cs  KebabCaseTransformer.cs  Program.cs  README.md  Split.postman_collection.json  appsettings.Development.json  docker-compose.yaml  server.csproj
server/Controllers/: PeopleController.cs  ProductsController.cs  StoresController.cs
server/Extensions/: WebApplicationBuilderExtensions.cs
server/Migrations/: 0001_CreateProductTable.sql  0001_Init.sql  0002_CaseInsensitiveUniqueContraintProductName.sql  0003_CreateStoreTable.sql  0004_CreatePersonTable.sql  20221119072112_InitialCreate.Designer.cs  20221119072112_InitialCreate.cs  20221119073134_ForeignKeys.Designer.cs  20221119073134_ForeignKeys.cs  20221119075301_UniqueItemAndStoreNames.Designer.cs  20221119075301_UniqueItemAndStoreNames.cs  20221126071617_ExplicitForeignKeys.Designer.cs  20221126071617_ExplicitForeignKeys.cs  SplitDbModelSnapshot.cs
server/Properties/: launchSettings.json
server/Services/: PeopleRepository.cs  ProductsRepository.cs  StoresRepository.cs
server/Services/Interfaces/: IPeopleRepository.cs  IProductsRepository.cs  IStoresRepository.cs
server/migrations/: 20230115064615_Init.sql
server/models/: Database.cs  Item.cs  Person.cs  Product.cs  Receipt.cs  ReceiptLine.cs  ReceiptLineSplit.cs  Store.cs
server/src/: api.rs  db.rs  error.rs  main.rs
server/src/api/: loader.rs  mod.rs  people.rs  person.rs  product.rs  products.rs  receipt.rs  receipt_line.rs  receipt_line_split.rs  (+3 more)
(+206 files in other folders)
