[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
validator = { version = "0.15", features = ["derive"] }
async-graphql = "5.0.4"
async-graphql-axum = "5.0.4"
